--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="examplefolder/style.css">
-    <link rel="About" href="About.html">
+    <link rel="bookmark" href="About.html">
+    <link rel="bookmark" href="/imagegallery/imagegallery.html"
     <title>My Portfolio</title>
   </head>
     <body>
