--- a/imagegallery/imagegallery.html
+++ b/imagegallery/imagegallery.html
@@ -18,7 +18,7 @@
     <main>
         <div class="image-grid">
             <div class="p1">
-                <img src="/imagegallery/Images/1">
+                <img src="/imagegallery/Images/1.jfif">
                 <div class="drop">
                     <div class=text>
                         “Life is 10% what happens to us and 90% how we react to it.”
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div class="p2">
-                <img src="/imagegallery/Images/2">
+                <img src="/imagegallery/Images/2.jfif">
                 <div class="drop">
                     <div class=text>
                         <div class=text>
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="p1">
-                <img src="/imagegallery/Images/3">
+                <img src="/imagegallery/Images/3.jfif">
                 <div class="drop">
                     <div class=text>
                         “Even if you’re on the right track, you’ll get run over if you just sit there.”
@@ -51,7 +51,7 @@
                 </div>
             </div>
             <div class="p2">
-                <img src="/imagegallery/Images/4">
+                <img src="/imagegallery/Images/4.jfif">
                 <div class="drop">
                     <div class=text>
                         “Nurture your mind with great thoughts. To believe in the heroic makes heroes.”
@@ -62,7 +62,7 @@
                 </div>
             </div>
             <div class="p1">
-                <img src="/imagegallery/Images/5">
+                <img src="/imagegallery/Images/5.jfif">
                 <div class="drop">
                     <div class=text>
                         “Look at the sparrows; they do not know what they will do in the next moment. Let us literally live from moment to moment.”
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div class="p2">
-                <img src="/imagegallery/Images/6">
+                <img src="/imagegallery/Images/6.jfif">
                 <div class="drop">
                     <div class=text>
                         “When I let go of what I am, I become what I might be.”
@@ -84,7 +84,7 @@
                 </div>
             </div>
             <div class="p1">
-                <img src="/imagegallery/Images/7">
+                <img src="/imagegallery/Images/7.jfif">
                 <div class="drop">
                     <div class=text>
                         “Courage is the first of human qualities because it is the quality which guarantees all others.”
@@ -95,7 +95,7 @@
                 </div>
             </div>
             <div class="p2">
-                <img src="/imagegallery/Images/8">
+                <img src="/imagegallery/Images/8.jfif">
                 <div class="drop">
                     <div class=text>
                         “Live each day as if your life had just begun.”
