--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="examplefolder/style.css">
     <link rel="bookmark" href="About.html">
-    <link rel="bookmark" href="myPortfolio/imagegallery/imagegallery.html">
+    <link rel="bookmark" href="../imagegallery/imagegallery.html">
     <title>My Portfolio</title>
   </head>
     <body>
@@ -17,7 +17,7 @@
                 <a class="has-border" href="About.html">About Me</a>
                 <a class="has-border">My Blog</a>
                 <a class="has-border">Contact Me</a>
-                <a class="has-border" href="/myPortfolio/imagegallery/imagegallery.html">Image Gallery</a>
+                <a class="has-border" href="../imagegallery/imagegallery.html">Image Gallery</a>
             </nav>
         </header>
         <main>
