--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a class="has-border" href="About.html">About Me</a>
                 <a class="has-border">My Blog</a>
                 <a class="has-border">Contact Me</a>
-                <a class="has-border" href="../imagegallery/imagegallery.html">Image Gallery</a>
+                <a class="has-border" href="/myPortfolio/imagegallery/imagegallery.html">Image Gallery</a>
             </nav>
         </header>
         <main>
